--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -12,6 +12,9 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   margin: 0;
-  background-color: #f2f2f2;
+  /* background-color: #f2f2f2; */
   /* background-color: RGB(11, 165, 161) */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(#0f1f5b,#007aff, #007aff, #0086ff, #0192ff, #029cff, #029cff, #23acfc, #3fb5ff, #5bc6fe, #74d5ff, #83defd, #8ee5ff, #9fecfe, #bcf5ff, #bdf6ff);
 }
