--- a/src/stylesheets/nav.css
+++ b/src/stylesheets/nav.css
@@ -2,6 +2,7 @@
     font-size: 18px;
     padding: 12px 16px;
     background-color: RGB(0, 25, 61);
+    background-color: #150734);
   }
   
   .my-nav-links {
