--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -19,3 +19,72 @@ body {
   background-image: linear-gradient(#0f1f5b,#007aff, #007aff, #0086ff, #0192ff, #029cff, #029cff, #23acfc, #3fb5ff, #5bc6fe, #74d5ff, #83defd, #8ee5ff, #9fecfe, #bcf5ff, #bdf6ff);
 }
 
+/* --- Index Table --- */
+
+/* #table {
+  // font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+
+
+  td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+
+  tr:hover {background-color: #ddd;}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #fcff42;
+  color: black;
+}
+
+}
+
+.scrollit {
+    overflow:scroll;
+    height: 300px;
+} */
+
+
+/* --- JS Table --- */
+
+   #table-js {
+     /* font-family: "Trebuchet MS", Arial, Helvetica, sans-serif; */
+     border-collapse: collapse;
+     width: 100%;
+     /* display: none; */
+   }
+
+     td, th {
+       border: 1px solid #ddd;
+       padding: 8px;
+     }
+
+     tr:hover {background-color: #ddd;}
+
+   th {
+     padding-top: 12px;
+     padding-bottom: 12px;
+     text-align: left;
+     background-color:#0F2557;
+     /* background-color: #28559A; */
+     color: white;
+     /* color: black; */
+   }
+
+   .container {
+     width: auto;
+     margin: 10px;
+     background-color: ;
+   }
+
+   .hide_table{
+     display: none;
+   }
+
+ 
+
