--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -19,6 +19,12 @@ body {
   background-image: linear-gradient(#0f1f5b,#007aff, #007aff, #0086ff, #0192ff, #029cff, #029cff, #23acfc, #3fb5ff, #5bc6fe, #74d5ff, #83defd, #8ee5ff, #9fecfe, #bcf5ff, #bdf6ff);
 }
 
+.data-container{
+  width: 100%;
+  background-color: white;
+}
+
+
 /* --- Index Table --- */
 
 /* #table {
