--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -5,3 +5,10 @@
 #all_projects.open {
     display: block;
 }
+
+.btn_container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
