Write own button html and css

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -26,13 +26,22 @@ body {
   margin-top: 35px;
 }
 
+.button {
+  border: none;
+  background-color: white;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+}
+
 .btn {
   margin: 20px;
 
 }
 .btn_space {
   padding-right: 10px;
-  
 }
 
 
