Work on adding button functionality when clicked

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -28,13 +28,30 @@ body {
 
 .button {
   border: none;
-  background-color: white;
+  background-color: #015cdc;
   padding: 8px 20px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
   border-radius: 8px;
+  /* border: 1px solid #015cdc; */
+  color: white;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
 }
+
+.button .open{
+  border: none;
+  background-color:#5ad7ff;
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+  /* border: 1px solid #015cdc; */
+  color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
 
 .btn {
   margin: 20px;
