--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -6,6 +6,15 @@
     display: block;
 }
 
+
+#open_projects {
+    display: none;
+}
+
+#open_projects.open {
+    display: block;
+}
+
 .btn_container{
     display: flex;
     flex-direction: row;
