--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -25,6 +25,7 @@ body {
   padding: 20px;
   margin-top: 35px;
 
+
 }
 
 .data_container h2{
@@ -33,6 +34,7 @@ body {
   margin-bottom: 15px;
   width: 100%;
   text-align: center;
+  /* color: white; */
 }
 
 .button {
@@ -48,6 +50,10 @@ body {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
 }
 
+.btn_style{
+  
+}
+/* 
 .button .open{
   border: none;
   background-color:#5ad7ff;
@@ -55,11 +61,11 @@ body {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  border-radius: 8px;
+  border-radius: 8px; */
   /* border: 1px solid #015cdc; */
-  color: black;
+  /* color: black;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
+} */
 
 
 .btn {
