--- a/src/stylesheets/form.css
+++ b/src/stylesheets/form.css
@@ -14,7 +14,7 @@
 
   }
   
-  input[type=password], input[type=email], input[type=text], select, textarea {
+  input[type=password], input[type=email], input[type=text], input[type=date], select, textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid rgb(16, 15, 15);
