--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -23,11 +23,7 @@
     margin-top: 30px;
 }
 
-.project_page {
-    margin: 20px;
-    background-color: white;
-    padding: 20px;
-}
-.project_page li {
+.data_container li {
     list-style-type: none;
+    padding: 5px;
 }
