--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -20,10 +20,14 @@ body {
 }
 
 .data_container{
-  width: 100%;
+  /* width: 100%; */
   background-color: white;
   padding: 20px;
   margin-top: 35px;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
 }
 
 .data_container h2{
