--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -15,6 +15,14 @@
     display: block;
 }
 
+#recently_saved_projects {
+    display: none;
+}
+
+#recently_saved_projects.open {
+    display: block;
+}
+
 .btn_container{
     display: flex;
     flex-direction: row;
