Edit styling of Project Page

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -39,6 +39,19 @@ body {
   /* color: white; */
 }
 
+.data-project h2{
+  font-size: 20px;
+   margin-left: 5px;
+   margin-bottom: 15px;
+   width: 100%;
+   text-align: center;
+   /* color: white; */
+ }
+
+ .data-project li{
+  list-style-type: none;
+  padding: 5px;
+ }
 .button {
   border: none;
   background-color: #015cdc;
