Style search box

--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -137,8 +137,11 @@ span.color{
     overflow-y: scroll;
     /* overflow-x:auto; */
     margin-top: 60px;
+    margin-left: 20px;
+    margin-right: 20px;
     background-color: white;
     padding: 20px;
+    /* text-align: center; */
 }
 
 .table-container h2{
@@ -146,4 +149,10 @@ span.color{
     margin-bottom: 10px;
     padding: 10px;
     font-size: 1.2rem;
+}
+
+#search {
+    width: 200px;
+    margin-bottom: 30px;
+
 }
